--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-react-app": "^7.0.1",
     "stylelint": "^14.16.0",
     "stylelint-config-standard": "^29.0.0"
   }
