--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["stylelint-config-standard"],
+  "extends": ["stylelint-config-recess-order", "stylelint-config-standard"],
   "rules": {
     "alpha-value-notation": "number",
     "at-rule-empty-line-before": null,
